[gd_scene load_steps=8 format=3 uid="uid://dq1xrk8nv2p4f"]

[ext_resource type="Script" path="res://scripts/ui/CombatScreen.gd" id="1_combat"]
[ext_resource type="PackedScene" uid="uid://cbe1qr0xnyd0m" path="res://scenes/BattlefieldArena.tscn" id="2_arena"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_topbar"]
bg_color = Color(0.08, 0.06, 0.12, 0.95)
border_width_bottom = 2
border_color = Color(0.3, 0.25, 0.4, 1)
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_threat"]
bg_color = Color(0.1, 0.05, 0.05, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.2, 0.2, 0.8)
corner_radius_left_top = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 10.0
content_margin_top = 8.0
content_margin_right = 10.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxLine" id="StyleBoxLine_sep"]
color = Color(0.4, 0.2, 0.2, 0.5)
thickness = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bottombar"]
bg_color = Color(0.08, 0.06, 0.12, 0.95)
border_width_top = 2
border_color = Color(0.3, 0.25, 0.4, 1)
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_selector"]
bg_color = Color(0.12, 0.1, 0.18, 0.98)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.5, 0.2, 1)
corner_radius_left_top = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
content_margin_left = 15.0
content_margin_top = 12.0
content_margin_right = 15.0
content_margin_bottom = 12.0

[node name="Combat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_combat")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.03, 0.02, 0.05, 1)

[node name="BattlefieldArena" parent="." instance=ExtResource("2_arena")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 70.0
offset_right = 0.0
offset_bottom = -70.0

[node name="ThreatPreview" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 10.0
offset_top = 80.0
offset_right = 175.0
offset_bottom = 280.0
theme_override_styles/panel = SubResource("StyleBoxFlat_threat")

[node name="ThreatContent" type="VBoxContainer" parent="ThreatPreview"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ThreatTitle" type="Label" parent="ThreatPreview/ThreatContent"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.3, 1)
theme_override_font_sizes/font_size = 14
text = "‚ö†Ô∏è INCOMING"
horizontal_alignment = 1

[node name="IncomingDamage" type="Label" parent="ThreatPreview/ThreatContent"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 36
text = "0"
horizontal_alignment = 1

[node name="IncomingLabel" type="Label" parent="ThreatPreview/ThreatContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 11
text = "damage next turn"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="ThreatPreview/ThreatContent"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_sep")

[node name="ThreatBreakdown" type="RichTextLabel" parent="ThreatPreview/ThreatContent"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true

[node name="MovingToMelee" type="Label" parent="ThreatPreview/ThreatContent"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.7, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "‚Üí Melee next: 0"
horizontal_alignment = 1

[node name="TopBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_topbar")

[node name="HBox" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="MarginLeft" type="Control" parent="TopBar/HBox"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="WaveInfo" type="VBoxContainer" parent="TopBar/HBox"]
layout_mode = 2
alignment = 1

[node name="WaveLabel" type="Label" parent="TopBar/HBox/WaveInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.75, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "WAVE 1/12"

[node name="TurnLabel" type="Label" parent="TopBar/HBox/WaveInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Turn 1/5"

[node name="Spacer" type="Control" parent="TopBar/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WardenStats" type="HBoxContainer" parent="TopBar/HBox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="HPContainer" type="HBoxContainer" parent="TopBar/HBox/WardenStats"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HPIcon" type="Label" parent="TopBar/HBox/WardenStats/HPContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚ù§Ô∏è"

[node name="HPLabel" type="Label" parent="TopBar/HBox/WardenStats/HPContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 26
text = "60/60"

[node name="ArmorContainer" type="HBoxContainer" parent="TopBar/HBox/WardenStats"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ArmorIcon" type="Label" parent="TopBar/HBox/WardenStats/ArmorContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üõ°Ô∏è"

[node name="ArmorLabel" type="Label" parent="TopBar/HBox/WardenStats/ArmorContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
theme_override_font_sizes/font_size = 26
text = "0"

[node name="ScrapContainer" type="HBoxContainer" parent="TopBar/HBox/WardenStats"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ScrapIcon" type="Label" parent="TopBar/HBox/WardenStats/ScrapContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚öôÔ∏è"

[node name="ScrapLabel" type="Label" parent="TopBar/HBox/WardenStats/ScrapContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 26
text = "0"

[node name="MarginRight" type="Control" parent="TopBar/HBox"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="BottomSection" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -250.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0

[node name="CardHand" type="HBoxContainer" parent="BottomSection"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
theme_override_constants/separation = -40
alignment = 1

[node name="BottomBar" type="PanelContainer" parent="BottomSection"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bottombar")

[node name="HBox" type="HBoxContainer" parent="BottomSection/BottomBar"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="DeckInfo" type="VBoxContainer" parent="BottomSection/BottomBar/HBox"]
layout_mode = 2
alignment = 1

[node name="DeckIcon" type="Label" parent="BottomSection/BottomBar/HBox/DeckInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üìö"
horizontal_alignment = 1

[node name="DeckCount" type="Label" parent="BottomSection/BottomBar/HBox/DeckInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.75, 1, 1)
theme_override_font_sizes/font_size = 20
text = "10"
horizontal_alignment = 1

[node name="EnergyContainer" type="HBoxContainer" parent="BottomSection/BottomBar/HBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="EnergyIcon" type="Label" parent="BottomSection/BottomBar/HBox/EnergyContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "‚ö°"

[node name="EnergyLabel" type="Label" parent="BottomSection/BottomBar/HBox/EnergyContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 36
text = "3/3"

[node name="EndTurnButton" type="Button" parent="BottomSection/BottomBar/HBox"]
custom_minimum_size = Vector2(140, 55)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 20
text = "END TURN"

[node name="DiscardInfo" type="VBoxContainer" parent="BottomSection/BottomBar/HBox"]
layout_mode = 2
alignment = 1

[node name="DiscardIcon" type="Label" parent="BottomSection/BottomBar/HBox/DiscardInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üóëÔ∏è"
horizontal_alignment = 1

[node name="DiscardCount" type="Label" parent="BottomSection/BottomBar/HBox/DiscardInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1

[node name="RingSelector" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -50.0
offset_right = 220.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_selector")

[node name="VBox" type="VBoxContainer" parent="RingSelector"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SelectLabel" type="Label" parent="RingSelector/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "SELECT TARGET RING"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="RingSelector/VBox"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MeleeButton" type="Button" parent="RingSelector/VBox/Buttons"]
custom_minimum_size = Vector2(80, 45)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
text = "MELEE"

[node name="CloseButton" type="Button" parent="RingSelector/VBox/Buttons"]
custom_minimum_size = Vector2(80, 45)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.3, 1)
text = "CLOSE"

[node name="MidButton" type="Button" parent="RingSelector/VBox/Buttons"]
custom_minimum_size = Vector2(80, 45)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.4, 1)
text = "MID"

[node name="FarButton" type="Button" parent="RingSelector/VBox/Buttons"]
custom_minimum_size = Vector2(80, 45)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.7, 1, 1)
text = "FAR"

[node name="CancelButton" type="Button" parent="RingSelector/VBox/Buttons"]
custom_minimum_size = Vector2(80, 45)
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Cancel"

[connection signal="pressed" from="BottomSection/BottomBar/HBox/EndTurnButton" to="." method="_on_end_turn_pressed"]
[connection signal="pressed" from="RingSelector/VBox/Buttons/MeleeButton" to="." method="_on_ring_selected" binds= [0]]
[connection signal="pressed" from="RingSelector/VBox/Buttons/CloseButton" to="." method="_on_ring_selected" binds= [1]]
[connection signal="pressed" from="RingSelector/VBox/Buttons/MidButton" to="." method="_on_ring_selected" binds= [2]]
[connection signal="pressed" from="RingSelector/VBox/Buttons/FarButton" to="." method="_on_ring_selected" binds= [3]]
[connection signal="pressed" from="RingSelector/VBox/Buttons/CancelButton" to="." method="_on_ring_cancel"]
